--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
             <a class="button" href="">Знижки</a>
         </header>
         <nav>
-            <a class="nav-link" href="">Каталог</a>
-            <a class="nav-link" href="">Оптом</a>
-            <a class="nav-link" href="">Доставка</a>
-            <a class="nav-link" href="">Повернення товару</a>
+            <a class="nav-link" href="https://learn.logikaschool.com/lesson?lesson=31771&level=8&module=4&task=74542">Каталог</a>
+            <a class="nav-link" href="https://learn.logikaschool.com/lesson?lesson=31771&level=8&module=4&task=74542">Оптом</a>
+            <a class="nav-link" href="https://learn.logikaschool.com/lesson?lesson=31771&level=8&module=4&task=74542">Доставка</a>
+            <a class="nav-link" href="https://learn.logikaschool.com/lesson?lesson=31771&level=8&module=4&task=74542">Повернення товару</a>
         </nav>
         <main>
             <h1>Професіонали радять</h1>
@@ -21,32 +21,32 @@
                     <h2>Лептоп для відпочинку</h2>
                     <img src="/uploads/2021/02/notebook-405755_1920_0_1613586011.jpg" width="400px" height="300px"/>
                     <p>Samsung V145-S</p>
-                    <a class="article-but" href="">Детальніше</a>
+                    <a class="article-but" href="https://learn.logikaschool.com/lesson?lesson=31771&level=8&module=4&task=74542">Детальніше</a>
                 </article>
                 <article>
                     <h2>Як вибрати навушники</h2>
                     <img src="/uploads/2021/02/music-1813100_1280_0_1613586010.png" width="330px" height="300px"/>
                     <p>Поговоримо про новинки</p>
-                    <a class="article-but" href="">Детальніше</a>
+                    <a class="article-but" href="https://learn.logikaschool.com/lesson?lesson=31771&level=8&module=4&task=74542">Детальніше</a>
                 </article>
                 <article>
                     <h2>Телефон мрії</h2>
                     <img src="/uploads/2021/02/mobile-phone-1875813_1920_0_1613586011.jpg" width="400px" height="300px"/>
                     <p>Apple iphone 13</p>
-                    <a class="article-but" href="">Детальніше</a>
+                    <a class="article-but" href="https://learn.logikaschool.com/lesson?lesson=31771&level=8&module=4&task=74542">Детальніше</a>
                 </article>
                 <article>
                     <h2>Техніка для всього</h2>
                     <img src="/uploads/2021/02/laptop-1483974_1920_0_1613586010.jpg" width="400px" height="300px"/>
                     <p>І цілого світу мало...</p>
-                    <a class="article-but" href="">Детальніше</a>
+                    <a class="article-but" href="https://learn.logikaschool.com/lesson?lesson=31771&level=8&module=4&task=74542">Детальніше</a>
                 </article>
             </section>
             <img src="/uploads/2021/02/mobile-phone-1419275_1920_0_1613586010.jpg" width="960" height="270"/>
         </main>
         <footer>
-            <a href=""><img src="/uploads/2021/02/icon-set-1142000_1280%201_0_1613586391.png" width="80px" height="80px"></a>
-            <a href=""><img src="/uploads/2021/02/instagram-3288419_1280%201_0_1613586391.png" width="80px" height="80px"></a>
+            <a href="https://learn.logikaschool.com/lesson?lesson=31771&level=8&module=4&task=74542"><img src="/uploads/2021/02/icon-set-1142000_1280%201_0_1613586391.png" width="80px" height="80px"></a>
+            <a href="https://learn.logikaschool.com/lesson?lesson=31771&level=8&module=4&task=74542"><img src="/uploads/2021/02/instagram-3288419_1280%201_0_1613586391.png" width="80px" height="80px"></a>
             <p><b>Напиши - отримай <br/> промокод!</b></p> 
         </footer>
     </body>
