--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 h1{
 text-align: center;
 font-family: Alergian;
+color: red;
 }
 img{
 width: 200px;
@@ -23,7 +24,7 @@ background-color: pink;
 }
 </style>
 <body>
-<h1>СВІТ ПОНЧИКІВ</h1>
+<h1>Світ пончиків</h1>
 <div>
 <img src="/uploads/2023/02/donut.png">
 <img src="/uploads/2023/02/donut.png">
